--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-password-mask": "^3.2.0",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
